Login gg firebase

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/auth/login/login.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/auth/login/login.component.html
@@ -41,7 +41,7 @@
               /></span>
               <span class="btn-inner--text">Github</span>
             </a>
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
+            <a href="javascript:void(0)" class="btn btn-neutral btn-icon" (click)="loginWithGoogle()">
               <span class="btn-inner--icon"
                 ><img src="../assets/img/icons/common/google.svg"
               /></span>
