--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/manage-place/manage-place.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/manage-place/manage-place.component.html
@@ -1,5 +1,5 @@
 <div class="admin-page">
-  <p-accordion>
+  <p-accordion [multiple]="true">
     <p-accordionTab header="Manage place"> Content 1 </p-accordionTab>
     <p-accordionTab header="Header 2"> Content 2 </p-accordionTab>
     <p-accordionTab header="Header 3"> Content 3 </p-accordionTab>
