--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/account-business-form/account-business-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/account-business-form/account-business-form.component.html
@@ -1,1 +1,82 @@
-<p>account-business-form works!</p>
+<p-toast position="top-right"></p-toast>
+<div class="admin-page p-3">
+  <p-card
+    [header]="editMode ? 'Edit Business Account' : 'New Business Account'"
+    [subheader]="editMode ? '' : 'Create A new Business Account'"
+  >
+    <p-toolbar>
+      <div class="p-toolbar-group-left"></div>
+      <div class="p-toolbar-group-right">
+        <p-button
+          label="Save"
+          icon="pi pi-check"
+          styleClass="p-button-warning mr-2"
+          (click)="onSubmit()"
+        ></p-button>
+
+        <p-button
+          icon="pi pi-times"
+          styleClass="p-button-danger"
+          (click)="onCancle()"
+        ></p-button>
+      </div>
+    </p-toolbar>
+
+    <div class="p-grid">
+      <div class="col-12">
+        <form [formGroup]="form">
+          <div class="p-fluid formgrid grid">
+            <div class="p-field col-4">
+              <label for="id">ID</label>
+              <input id="id" type="text" pInputText />
+            </div>
+            <div class="p-field col-4">
+              <label for="name">Name</label>
+              <input id="name" type="text" pInputText formControlName="name" />
+            </div>
+            <div class="p-field col-4">
+              <label for="phone">Phone</label>
+              <p-inputMask
+                id="phone"
+                placeholder="(+84)98-235-4461"
+                mask="(+84)99-999-9999"
+                formControlName="phone"
+              ></p-inputMask>
+            </div>
+          </div>
+
+          <div class="p-fluid formgrid grid mt-5">
+            <div class="p-field col-4">
+              <label for="email">Email</label>
+              <input
+                id="email"
+                type="email"
+                pInputText
+                formControlName="email"
+              />
+            </div>
+            <div class="p-field col-4">
+              <label for="address">Address</label>
+              <input
+                id="address"
+                type="text"
+                pInputText
+                formControlName="address"
+              />
+            </div>
+            <div class="p-field col-4">
+              <label for="status">Status</label>
+              <p-dropdown
+                [(ngModel)]="selectedStatus"
+                optionLabel="name"
+                optionValue="id"
+                [options]="businessStatus"
+                formControlName="status"
+              ></p-dropdown>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </p-card>
+</div>
