--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/account-business-form/account-business-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/account-business-form/account-business-form.component.html
@@ -5,7 +5,9 @@
     [subheader]="editMode ? '' : 'Create A new Business Account'"
   >
     <p-toolbar>
-      <div class="p-toolbar-group-left"></div>
+      <div class="p-toolbar-group-left">
+       
+      </div>
       <div class="p-toolbar-group-right">
         <p-button
           label="Save"
@@ -36,12 +38,12 @@
             </div>
             <div class="p-field col-4">
               <label for="phone">Phone</label>
-              <p-inputMask
+              <input
                 id="phone"
-                placeholder="(+84)98-235-4461"
-                mask="(+84)99-999-9999"
                 formControlName="phone"
-              ></p-inputMask>
+                pInputText
+                type="text"
+              />
               <small
                 *ngIf="businessForm.phone.invalid && isSubmit"
                 class="p-error"
@@ -54,10 +56,10 @@
             <div class="p-field col-4">
               <label for="email">Email</label>
               <input
-                id="email"
-                type="text"
-                pInputText
                 formControlName="email"
+                id="email"
+                type="email"
+                pInputText
               />
             </div>
             <div class="p-field col-4">
@@ -77,7 +79,8 @@
                 optionValue="id"
                 [options]="businessStatus"
                 formControlName="status"
-                (onChange)="selected($event)"
+                placeholder="Select a City"
+                [showClear]="true"
               ></p-dropdown>
             </div>
           </div>
