fix bug phone number

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/account-business-form/account-business-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/account-business-form/account-business-form.component.html
@@ -39,12 +39,13 @@
             </div>
             <div class="p-field col-4">
               <label for="phone">Phone</label>
-              <p-inputMask
+              <input
                 id="phone"
                 formControlName="phone"
                 type="text"
-                mask="9999999999"
-              ></p-inputMask>
+                pInputText
+                maxlength="10"
+              />
               <small
                 *ngIf="businessForm.phone.invalid && isSubmit"
                 class="p-error"
