--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/home-pages.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/home-pages.component.html
@@ -34,7 +34,7 @@
           [rowsPerPageOptions]="[10, 20, 50]"
           [paginator]="true"
           [filterDelay]="0"
-          [globalFilterFields]="['name', 'email', 'phone', 'status']"
+          [globalFilterFields]="['name', 'emailAddress', 'phone', 'status']"
         >
           <ng-template pTemplate="header">
             <tr>
