--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/auth/login/login.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/auth/login/login.component.html
@@ -41,7 +41,11 @@
               /></span>
               <span class="btn-inner--text">Github</span>
             </a>
-            <a href="javascript:void(0)" class="btn btn-neutral btn-icon" (click)="loginWithGoogle()">
+            <a
+              href="javascript:void(0)"
+              class="btn btn-neutral btn-icon"
+              (click)="loginWithGoogle()"
+            >
               <span class="btn-inner--icon"
                 ><img src="../assets/img/icons/common/google.svg"
               /></span>
@@ -53,7 +57,7 @@
           <div class="text-center text-muted mb-4">
             <small>Or sign in with credentials</small>
           </div>
-          <form role="form">
+          <form role="form" [formGroup]="userForm">
             <div class="form-group mb-3">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
@@ -61,7 +65,12 @@
                     ><i class="ni ni-email-83"></i
                   ></span>
                 </div>
-                <input class="form-control" placeholder="Email" type="email" />
+                <input
+                  class="form-control"
+                  placeholder="Email"
+                  type="email"
+                  formControlName="email"
+                />
               </div>
             </div>
             <div class="form-group">
@@ -75,6 +84,7 @@
                   class="form-control"
                   placeholder="Password"
                   type="password"
+                  formControlName="password"
                 />
               </div>
             </div>
@@ -91,7 +101,11 @@
               </label>
             </div>
             <div class="text-center">
-              <button type="button" class="btn btn-primary my-4">
+              <button
+                type="button"
+                class="btn btn-primary my-4"
+                (click)="onSignIn()"
+              >
                 Sign in
               </button>
             </div>
