--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.html
@@ -35,6 +35,12 @@
             {{ menuItem.title }}
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="login" (click)="logout()">
+            <i class="ni ni-bold-left text-red"></i>
+            Logout
+          </a>
+        </li>
       </ul>
     </div>
   </div>
