--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/auth/login/login.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/auth/login/login.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-right"></p-toast>
 <div class="header bg-gradient-danger py-7 py-lg-8">
   <div class="container">
     <div class="header-body text-center mb-7">
@@ -71,6 +72,11 @@
                   type="email"
                   formControlName="email"
                 />
+                <small
+                  *ngIf="usersForm.email.invalid && isSubmit"
+                  class="p-error"
+                  >Email is required</small
+                >
               </div>
             </div>
             <div class="form-group">
@@ -86,6 +92,11 @@
                   type="password"
                   formControlName="password"
                 />
+                <small
+                  *ngIf="usersForm.password.invalid && isSubmit"
+                  class="p-error"
+                  >Password is required</small
+                >
               </div>
             </div>
             <div
@@ -108,6 +119,16 @@
               >
                 Sign in
               </button>
+              <div>
+                <p-progressSpinner
+                  *ngIf="loading"
+                  [style]="{ width: '50px', height: '50px' }"
+                  styleClass="custom-spinner"
+                  strokeWidth="8"
+                  fill="#EEEEEE"
+                  animationDuration=".5s"
+                ></p-progressSpinner>
+              </div>
             </div>
           </form>
         </div>
