delete function create account

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/auth/login/login.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/auth/login/login.component.html
@@ -116,6 +116,7 @@
                 type="button"
                 class="btn btn-primary my-4"
                 (click)="onSignIn()"
+                (keydown.enter)="onSignIn()"
               >
                 Sign in
               </button>
