--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/home-pages.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/home-pages/home-pages.component.html
@@ -3,14 +3,14 @@
   <p-card header="Dashboard" subheader="List of all Business Account">
     <p-toolbar styleClass="p-mb-4">
       <ng-template pTemplate="left">
-        <button
+        <!-- <button
           pButton
           pRipple
           label="New"
           icon="pi pi-plus"
           class="p-button-success p-mr-2"
           (click)="newBusiness()"
-        ></button>
+        ></button> -->
       </ng-template>
 
       <span class="p-input-icon-right">
