Fixed tour layout

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/tour-form/tour-form.component.html
@@ -95,9 +95,8 @@
             </div>
             <div class="p-field col-12">
               <label for="status">Descriptions</label>
-              <p-skeleton width="10rem" styleClass="p-mb-2"></p-skeleton>
-              <p-skeleton width="5rem" styleClass="p-mb-2"></p-skeleton>
-              <p-skeleton height=".5rem"></p-skeleton>
+              <p-skeleton width="100%" styleClass="p-mb-2"></p-skeleton>
+              <p-skeleton height="25rem" styleClass="p-mb-2"></p-skeleton>
             </div>
           </div>
         </form>
