--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/tours/tours.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/tours/tours.component.html
@@ -1,6 +1,13 @@
 <p-toast position="top-right"></p-toast>
-<div class="admin-page">
-  <p-card header="Tours" subheader="List of all Tours Currents">
+
+<p-confirmDialog
+  [style]="{ width: '50vw' }"
+  [baseZIndex]="10000"
+  rejectButtonStyleClass="p-button-text"
+></p-confirmDialog>
+
+<div class="admin-tour p-3">
+  <p-card header="List Tours">
     <p-toolbar styleClass="p-mb-4">
       <ng-template pTemplate="left">
         <button
@@ -18,90 +25,60 @@
         <input
           pInputText
           type="text"
-          (input)="dt.filterGlobal(getValue($event), 'contains')"
+          (input)="dv.filter(getValue($event), 'contains')"
           placeholder="Global Search"
         />
       </span>
     </p-toolbar>
-    <hr />
-    <div class="grid">
-      <div class="col-12">
-        <p-table
-          #dt
-          [value]="tours"
-          [rows]="10"
-          [showCurrentPageReport]="true"
-          [rowsPerPageOptions]="[5, 10, 20]"
-          [paginator]="true"
-          [filterDelay]="0"
-          [globalFilterFields]="['tittle', 'descriptions', 'status']"
-        >
-          <ng-template pTemplate="header">
-            <tr>
-              <th>ID</th>
-              <th pSortableColumn="name">
-                Tittle <p-sortIcon field="tittle"></p-sortIcon>
-              </th>
+    <p-dataView
+      #dv
+      [value]="tours"
+      [paginator]="true"
+      [rows]="9"
+      [totalRecords]="120"
+      [rowsPerPageOptions]="[9, 18, 36]"
+      filterBy="tittle"
+      layout="grid"
+    >
+      <!-- <ng-template pTemplate="header">
+        <div class="d-flex p-flex-column p-flex-md-row p-jc-md-between">
+          <span class="p-input-icon-left mb-2 mb-md-0">
+            <i class="pi pi-search"></i>
+            <input
+              type="search"
+              pInputText
+              placeholder="Search by Name"
+              (input)="dv.filter(getValue($event))"
+            />
+          </span>
+        </div>
+      </ng-template> -->
 
-              <th>Descriptions</th>
-              <th>
-                <p-columnFilter
-                  field="status"
-                  matchMode="equals"
-                  [showMenu]="false"
-                >
-                  <ng-template
-                    pTemplate="filter"
-                    let-value
-                    let-filter="filterCallback"
-                  >
-                    <p-dropdown
-                      [ngModel]="value"
-                      [options]="status"
-                      (onChange)="filter($event.value)"
-                      placeholder="Status"
-                      [showClear]="true"
-                      optionValue="id"
-                      optionLabel="name"
-                    >
-                    </p-dropdown>
-                  </ng-template>
-                </p-columnFilter>
-              </th>
-              <th></th>
-            </tr>
-          </ng-template>
-
-          <ng-template pTemplate="body" let-tours>
-            <tr *ngIf="loading">
-              <td><p-skeleton></p-skeleton></td>
-              <td><p-skeleton></p-skeleton></td>
-              <td><p-skeleton></p-skeleton></td>
-              <td><p-skeleton></p-skeleton></td>
-              <td class="flex">
-                <p-skeleton
-                  shape="circle"
-                  size="3rem"
-                  styleClass="p-mr-2"
-                ></p-skeleton>
-                <p-skeleton
-                  shape="circle"
-                  size="3rem"
-                  styleClass="p-mr-2"
-                ></p-skeleton>
-              </td>
-            </tr>
-            <tr *ngIf="!loading">
-              <td>{{ tours.id }}</td>
-              <td>{{ tours.tittle }}</td>
-              <td>{{ tours.descriptions }}</td>
-              <td class="p-ai-center p-pl-2">
+      <ng-template let-tours pTemplate="gridItem">
+        <div class="col-4 md-4 mt-3">
+          <p-card [style]="{ width: '360px' }" styleClass="p-card-shadow">
+            <div class="flex justify-content-between">
+              <div>
+                {{ tours.tittle }}
+              </div>
+              <div>
                 <p-tag
-                  [value]="tourStatus[tours.status]?.lable"
                   [severity]="tourStatus[tours.status]?.color"
+                  [value]="tourStatus[tours.status]?.lable"
                 ></p-tag>
-              </td>
-              <td>
+              </div>
+            </div>
+
+            <ng-template pTemplate="content">
+              <p [innerHTML]="tours.descriptions"></p>
+              <p-rating
+                [ngModel]="5"
+                [readonly]="true"
+                [cancel]="false"
+              ></p-rating>
+            </ng-template>
+            <ng-template pTemplate="footer">
+              <div>
                 <button
                   pButton
                   pRipple
@@ -113,20 +90,15 @@
                 <button
                   pButton
                   pRipple
-                  icon="pi pi-ban"
-                  class="p-button-rounded p-button-warning"
+                  icon="pi pi-times-circle"
+                  class="p-button-rounded p-button-danger"
                   (click)="deleteTour(tours.id)"
                 ></button>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
-      </div>
-    </div>
+              </div>
+            </ng-template>
+          </p-card>
+        </div>
+      </ng-template>
+    </p-dataView>
   </p-card>
 </div>
-<p-confirmDialog
-  [style]="{ width: '50vw' }"
-  [baseZIndex]="10000"
-  rejectButtonStyleClass="p-button-text"
-></p-confirmDialog>
