do destinations tours

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/apartments/apartments.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/apartments/apartments.component.html
@@ -1,6 +1,6 @@
 <p-toast position="top-right"></p-toast>
 <div class="admin-page p-3">
-  <p-card header="List all Apartments">
+  <p-card header="Apartments" subheader="List all Apartments">
     <p-toolbar styleClass="p-mb-4">
       <span class="p-input-icon-right">
         <i class="pi pi-search"></i>
