--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.html
@@ -11,6 +11,7 @@
       <img
         src="./assets/img/brand/logo-yacht.png"
         class="navbar-brand-img"
+        width="100%"
         alt="..."
       />
     </a>
